[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ujur"
version = "1.0.0"
description = "Jitter-based seed-free random number and synthetic data generator"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["random", "synthetic data", "jitter", "rng", "dataset"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vibexcode/ujur"
Repository = "https://github.com/vibexcode/ujur"
